# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,9 @@ import categoriesRouter from "./categories";
 import postsRouter from "./posts";
 import commentsRouter from "./comments";
 import statsRouter from "./stats";
+import productCategoriesRouter from "./product-categories";
+import productsRouter from "./products";
+import ordersRouter from "./orders";
 
 const router: IRouter = Router();
 
@@ -14,5 +17,8 @@ router.use(categoriesRouter);
 router.use(postsRouter);
 router.use(commentsRouter);
 router.use(statsRouter);
+router.use(productCategoriesRouter);
+router.use(productsRouter);
+router.use(ordersRouter);
 
 export default router;
